--- a/website/index.html
+++ b/website/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-	<title>OculusGo Streamer</title>
+	<title>OculusGo Streamer by Kaj Toet</title>
 	<link rel="stylesheet" type="text/css" href="style.css?v8">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="script.js?v49"></script>
+	<script src="script.js?v53"></script>
 </head>
 <body>
 	<canvas id="canvas" width="800" height="400"></canvas>
