--- a/assets/website/index.html
+++ b/assets/website/index.html
@@ -4,6 +4,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css?v11">
 	<script src="jquery-3.2.1.min.js"></script>
 	<script src="script.js?v69"></script>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	</head>
 </head>
 <body>
 	<canvas id="canvas" width="800" height="400"></canvas>
