--- a/website/index.html
+++ b/website/index.html
@@ -1,15 +1,21 @@
 <html>
 <head>
 	<title>OculusGo Streamer by Kaj Toet</title>
-	<link rel="stylesheet" type="text/css" href="style.css?v11">
+	<link rel="stylesheet" type="text/css" href="style.css?v14">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="script.js?v77"></script>
+	<script src="script.js?v78"></script>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 </head>
 <body>
 	<canvas id="canvas" width="800" height="400"></canvas>
-	<input id="keyboardHack" type="text"></input>
+	<div class="menu">
+		<div class="menu-contents">
+			<input id="keyboardHack" type="text"></input>
+			<img src="fullscreen.png" class="menu-fullscreen menu-icon"/>
+		</div>
+		<img src="menu.png" class="menu-open menu-icon"/>
+	</div>
 </body>
 </html>
