Small fix for backspace feature

--- a/website/index.html
+++ b/website/index.html
@@ -12,7 +12,7 @@
 	<canvas id="canvas" width="800" height="400"></canvas>
 	<div class="menu">
 		<div class="menu-contents">
-			<input id="keyboardHack" type="text"></input>
+			<input id="keyboardHack" type="text" value=" "></input>
 			<img src="fullscreen.png" class="menu-fullscreen menu-icon"/>
 		</div>
 		<img src="menu.png" class="menu-open menu-icon"/>
