Switch displays button

--- a/website/index.html
+++ b/website/index.html
@@ -3,7 +3,7 @@
 	<title>OculusGo Streamer by Kaj Toet</title>
 	<link rel="stylesheet" type="text/css" href="style.css?v14">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="script.js?v82"></script>
+	<script src="script.js?v83"></script>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
@@ -14,6 +14,7 @@
 		<div class="menu-contents">
 			<input id="keyboardHack" type="text" value=" "></input>
 			<img src="fullscreen.png" class="menu-fullscreen menu-icon"/>
+			<img src="nextscreen.png" class="menu-nextscreen menu-icon"/>
 		</div>
 		<img src="menu.png" class="menu-open menu-icon"/>
 	</div>
