--- a/website/index.html
+++ b/website/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
 	<title>OculusGo Streamer by Kaj Toet</title>
-	<link rel="stylesheet" type="text/css" href="style.css?v14">
+	<link rel="stylesheet" type="text/css" href="style.css?v15">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="script.js?v83"></script>
+	<script src="script.js?v87"></script>
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no" />
 	</head>
 </head>
 <body>
