Started with benchmarking test, added license

--- a/website/test.html
+++ b/website/test.html
@@ -3,7 +3,7 @@
 	<title>OculusGo Streamer by Kaj Toet</title>
 	<link rel="stylesheet" type="text/css" href="style.css?v15">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="script.js?v90"></script>
+	<script src="testscript.js?v90"></script>
 	<head>
 		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=0.5, user-scalable=no" />
 	</head>
