--- a/website/index.html
+++ b/website/index.html
@@ -3,9 +3,9 @@
 	<title>OculusGo Streamer by Kaj Toet</title>
 	<link rel="stylesheet" type="text/css" href="style.css?v15">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="pcm-player.js"></script>
-	<script src="audioscript.js?v29"></script>
-	<script src="script.js?v26"></script>
+	<script src="pcm-player.js?v80"></script>
+	<script src="audioscript.js?v37"></script>
+	<script src="script.js?v25"></script>
 	<head>
 		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=0.5, user-scalable=no" />
 	</head>
