--- a/assets/website/index.html
+++ b/assets/website/index.html
@@ -3,7 +3,9 @@
 	<title>OculusGo Streamer by Kaj Toet</title>
 	<link rel="stylesheet" type="text/css" href="style.css?v15">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="script.js?v90"></script>
+	<script src="pcm-player.js?v85"></script>
+	<script src="audioscript.js?v38"></script>
+	<script src="script.js?v25"></script>
 	<head>
 		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=0.5, user-scalable=no" />
 	</head>
@@ -15,6 +17,7 @@
 			<input id="keyboardHack" type="text" value=" "></input>
 			<img src="fullscreen.png" class="menu-fullscreen menu-icon"/>
 			<img src="nextscreen.png" class="menu-nextscreen menu-icon"/>
+			<img src="audio.png" class="menu-audio menu-icon"/>
 		</div>
 		<img src="menu.png" class="menu-open menu-icon"/>
 	</div>
