--- a/assets/website/index.html
+++ b/assets/website/index.html
@@ -3,11 +3,11 @@
 	<title>OculusGo Streamer by Kaj Toet</title>
 	<link rel="stylesheet" type="text/css" href="style.css?v15">
 	<script src="jquery-3.2.1.min.js"></script>
-	<script src="pcm-player.js?v38"></script>
+	<script src="pcm-player.js?v39"></script>
 	<script src="audioscript.js?v58"></script>
 	<script src="script.js?v25"></script>
 	<head>
-		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, target-densitydpi=device-dpi, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 </head>
 <body>
